--- a/src/app/pages/sprintdetail/sprintdetail.component.html
+++ b/src/app/pages/sprintdetail/sprintdetail.component.html
@@ -1,11 +1,21 @@
-<mat-card>
-  <mat-card-title>
-    Sprint 1
-  </mat-card-title>
-  <mat-card-content>
+<form [formGroup]="addressForm" novalidate (ngSubmit)="onSubmit()">
+    <mat-card class="shipping-card">
+      <mat-card-content >
+        <div class="row" >
+          <mat-form-field class="full-width" appearance="outline">
+            <input matInput placeholder="Sprint Name" formControlName="sprintName">
+          </mat-form-field>
+        </div>
+        <div class="row">
+          
+        </div>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-raised-button color="accent" >Add Story</button>
+        <button mat-raised-button color="primary" type="submit">Salvar</button>
+      </mat-card-actions>
+    </mat-card>
+  </form>
+  
 
-    <mat-form-field>
-      <input matInput placeholder="Titulo Sprint" value="Reformulação de Layout">
-    </mat-form-field>
-  </mat-card-content>
-</mat-card>
+
