--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #ccc;}
-/deep/.mat-sidenav-content {
+.mat-sidenav-content {
     background-color: #ccc;
 }
 .mat-card {
